[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,2 +1,27 @@
 <html>
+<head>
+    <title>
+        Aricle Three, I am Manpreet.
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head> 
+<body>
+    <div>
+     <a href="/">Home</a>   
+    </div>
+    <h3>
+        Article Three.
+    </h3>
+    <div>
+        August,2017
+    </div>
+    <div>
+        <p>
+            This is the content for my Third Article.This is the content for my Third Article.This is the content for my Third Article.This is the content for my Third Article.This is the content for my Third Article.This is the content for my Third Article.
+        </p>
+        <p>
+            This is the content for my Third Article.This is the content for my Third Article.This is the content for my Third Article.This is the content for my Third Article.This is the content for my Third Article.This is the content for my Third Article.
+        </p>
+    </div>
+</body>
 </html>
