--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,2 +1,27 @@
 <html>
+<head>
+    <title>
+        Aricle Two, I am Manpreet.
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head> 
+<body>
+    <div>
+     <a href="/">Home</a>   
+    </div>
+    <h3>
+        Article Two.
+    </h3>
+    <div>
+        August,2017
+    </div>
+    <div>
+        <p>
+            This is the content for my Two Article.This is the content for my Two Article.This is the content for my Two Article.This is the content for my Two Article.This is the content for my Two Article.This is the content for my Two Article.This is the content for my Two Article.
+        </p>
+        <p>
+            This is the content for my Two Article.This is the content for my Two Article.This is the content for my Two Article.This is the content for my Two Article.This is the content for my Two Article.This is the content for my Two Article.This is the content for my Two Article.
+        </p>
+    </div>
+</body>
 </html>
