--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,12 +4,16 @@
         Aricle one, I am Manpreet.
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head> 
+<style>
+    
+</style>
+</head>
 <body>
-    <div>
-     <a href="/">Home</a>   
-    </div>
-    <h3>
+    <div class="container>
+      <div>
+      <a href="/">Home</a>   
+      </div>
+     <h3>
         Article one.
     </h3>
     <div>
@@ -22,6 +26,7 @@
         <p>
             This is the content for my First Article.This is the content for my First Article.This is the content for my First Article.This is the content for my First Article.This is the content for my First Article.This is the content for my First Article.This is the content for my First Article.
         </p>
+    </div>
     </div>
 </body>
 </html>
